--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -65,10 +65,12 @@ jobs:
 
       # Notify Teams if the SAST step failed at/above the threshold.
       - name: Notify Teams on failure
-        if: steps.snyk.outcome == 'failure' && secrets.TEAMS_WEBHOOK != ''
+        if: steps.snyk.outcome == 'failure' && env.TEAMS_WEBHOOK != ''
         uses: microsoft/teams-action@v0.4
+        env:
+          TEAMS_WEBHOOK: ${{ secrets.TEAMS_WEBHOOK }}
         with:
-          webhook: ${{ secrets.TEAMS_WEBHOOK }}
+          webhook: ${{ env.TEAMS_WEBHOOK }}
           message: >-
             SAST failed: ${{ job.status }} High vulns in ${{ github.repository }} -
             ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
