Make Snyk findings non-blocking

--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -136,11 +136,12 @@ jobs:
             echo "- SAST SARIF: reports/snyk-code.sarif"
             echo "- SCA SARIF: reports/snyk-oss.sarif"
             echo "- Artifacts: snyk-sast-${{ env.REPORT_TS }}, snyk-sca-${{ env.REPORT_TS }}"
+            echo "- SAST status: ${{ steps.snyk_code.outcome }}"
+            echo "- SCA status: ${{ steps.snyk_oss.outcome }}"
           } >> "$GITHUB_STEP_SUMMARY"
 
-      # Fail the job if Snyk found issues at/above the threshold.
-      - name: Enforce failure on findings
+      # Report findings without failing the job so uploads always complete.
+      - name: Report findings (non-blocking)
         if: steps.snyk_code.outcome == 'failure' || steps.snyk_oss.outcome == 'failure'
         run: |
-          echo "Snyk found issues at or above the threshold."
-          exit 1
+          echo "::error::Snyk found issues at or above the threshold."
