Add DAST workflow and LLM toggle

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,6 @@
     "DefaultConnection": "Data Source=Database/app.db"
   },
   "csrfLab": false,
+  "enableLlmLabs": true,
   "aiModel": "tinyllama:1.1b-chat"
 }
