--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -102,6 +102,7 @@ jobs:
         continue-on-error: true
         uses: zaproxy/action-full-scan@v0.13.0
         env:
+          NODE_OPTIONS: "--no-deprecation"
           ZAP_AUTH_HEADER: Cookie
           ZAP_AUTH_HEADER_VALUE: ${{ steps.auth.outputs.cookie }}
           ZAP_AUTH_HEADER_SITE: ${{ inputs.target-url }}
