--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Prepare reports
         run: |
           mkdir -p reports
+          chmod -R a+rwX reports
           echo "REPORT_TS=$(date -u +%Y%m%d-%H%M%S)" >> "$GITHUB_ENV"
 
       - name: Decide LLM coverage
@@ -110,8 +111,18 @@ jobs:
           target: ${{ inputs.target-url }}
           docker_name: "ghcr.io/zaproxy/zaproxy:stable"
           rules_file_name: ".zap/rules.tsv"
-          cmd_options: "-j -J reports/zap-report.json -r reports/zap-report.html"
+          cmd_options: "-j"
           fail_action: false
+
+      - name: Normalize reports
+        if: always()
+        run: |
+          if [ -f report_html.html ]; then
+            cp report_html.html reports/zap-report.html
+          fi
+          if [ -f report_json.json ]; then
+            cp report_json.json reports/zap-report.json
+          fi
 
       - name: Upload DAST artifacts
         if: always()
