--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -54,6 +54,7 @@ jobs:
           format: cyclonedx
           output: reports/trivy-sbom.json
           trivyignores: .trivyignore
+          scanners: vuln
 
       - name: Scan for HIGH/CRITICAL vulnerabilities
         uses: aquasecurity/trivy-action@0.24.0
